[gd_scene load_steps=15 format=3 uid="uid://f4lf446nhojp"]

[ext_resource type="Texture2D" uid="uid://d4ftyrw85ojhk" path="res://assets/levels/stage3parallex.png" id="1_l4hnd"]
[ext_resource type="Script" path="res://scripts/StartStage.gd" id="1_wk61c"]
[ext_resource type="Texture2D" uid="uid://cqxq8h7ssdnhi" path="res://assets/levels/stage3scene3.png" id="2_q31wv"]
[ext_resource type="PackedScene" uid="uid://dtxv8pnlo7hax" path="res://scenes/Teardrop.tscn" id="3_hdht0"]
[ext_resource type="Script" path="res://scripts/NextLevel.gd" id="4_4eva3"]
[ext_resource type="Texture2D" uid="uid://dsbj37x83wacg" path="res://assets/texts/finalsentance-1.png" id="4_8menl"]
[ext_resource type="Texture2D" uid="uid://dqy56smq4rl6f" path="res://assets/texts/finalsentance-2.png" id="5_25x0o"]
[ext_resource type="PackedScene" uid="uid://c7qj03vctgfnf" path="res://scenes/FinalStage.tscn" id="5_a8hmn"]
[ext_resource type="Script" path="res://scripts/TextAppear.gd" id="6_bn4u2"]
[ext_resource type="AudioStream" uid="uid://kwc0w50xvt0p" path="res://assets/nerration/scene_3_sentence_4.mp3" id="10_mnydj"]
[ext_resource type="AudioStream" uid="uid://c7s2mjtrhvexv" path="res://assets/nerration/scene_2_sentence_1.mp3" id="11_lx155"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xvqg"]
size = Vector2(1122.75, 8.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_x5hxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8menl")
}, {
"duration": 1.0,
"texture": ExtResource("5_25x0o")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_varm8"]
size = Vector2(4, 220)

[node name="Stage3-3" type="Node2D"]
script = ExtResource("1_wk61c")

[node name="MotionlessBackground" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Sprite2D" parent="MotionlessBackground"]
position = Vector2(961, 407)
scale = Vector2(0.822, 0.822)
texture = ExtResource("1_l4hnd")

[node name="Clouds" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(961, 406)
scale = Vector2(0.822, 0.822)
texture = ExtResource("2_q31wv")

[node name="Main" type="StaticBody2D" parent="."]
position = Vector2(0, -144)

[node name="CloudCollision" type="CollisionPolygon2D" parent="Main"]
position = Vector2(0, 113)
polygon = PackedVector2Array(-2, 651, -1, 850, 42, 847, 66, 842, 99, 823, 158, 816, 195, 814, 240, 833, 292, 839, 339, 834, 393, 827, 429, 816, 440, 816, 466, 831, 501, 831, 539, 822, 591, 826, 627, 823, 671, 822, 698, 828, 748, 829, 792, 842, 844, 864, 913, 889, 952, 919, 967, 936, 968, 960, 953, 974, 941, 990, 906, 998, 865, 1004, 821, 1007, 783, 1014, 781, 1055, 786, 1073, 787, 1087, 795, 1104, 798, 1120, 796, 1129, -14, 1134, -11, 644)

[node name="Teardrop" parent="." instance=ExtResource("3_hdht0")]
position = Vector2(96, 697)
initial_zoom = Vector2(1, 1)
initial_scale = Vector2(4, 4)

[node name="NextStage" type="Area2D" parent="."]
position = Vector2(-276, -322)
script = ExtResource("4_4eva3")
next_level = ExtResource("5_a8hmn")

[node name="NextStageCollision" type="CollisionShape2D" parent="NextStage"]
position = Vector2(1636.63, 1436.25)
shape = SubResource("RectangleShape2D_6xvqg")

[node name="Text1" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 100
position = Vector2(1458.5, 760)
sprite_frames = SubResource("SpriteFrames_x5hxp")
autoplay = "default"

[node name="TextAppear" type="Area2D" parent="." node_paths=PackedStringArray("text")]
position = Vector2(1118.5, 727)
script = ExtResource("6_bn4u2")
text = NodePath("../Text1")
narration = ExtResource("10_mnydj")

[node name="TextAppearCollision" type="CollisionShape2D" parent="TextAppear"]
position = Vector2(-245.5, 1)
shape = SubResource("RectangleShape2D_varm8")

[node name="Narration" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_lx155")

[connection signal="body_entered" from="NextStage" to="NextStage" method="_on_body_entered"]
[connection signal="body_entered" from="TextAppear" to="TextAppear" method="_on_body_entered"]
